- Moved automated testing framework moved to a dedicated R package "rkwardtests", and added documentation
- Support pasting to the middle of the current command line in the R Console
- Better handling of script-editor commands while the R Console is busy
- Correct interleaving of multi-line commands and the corresponding output in the R Console
- Fixed: Portions of multi-line commands entered on the R Console would be run twice under some circumstances
- Fixed: Lockups or crashes when using packages RGtk2 or rJava on the X11 platform
- Fixed: R task callback handlers were not called
- GUI frontend and R backend now run in separate processes
- Re-write of large portions of the R embedding code
- Fixed: Did not respect system settings for tooltip background color in some styles
- Fixed: Installation would continue, seemingly successfully, even if R support libraries could not be installed
- Fixed: Function argument hints would sometimes persist after closing a script window
- Fixed: Would fail to analyse structure of ReferenceClass-objects
- Fixed: "Vector" mode in "Paste special" action did not work correctly
- Attempt to save workspace on crashes		TODO: detect recovery-file at startup, and offer to load it.
- Also try to relay SIGABRT and SIGILL to the proper signal handlers
- Removed the remainder of the PHP scripting backend
- Fixed: Would crash on tcl/tk events in some cases

--- Version 0.5.4 - Oct-04-2010
- Fixed: Running user commands would crash with R 2.12.0
- Added full-featured plot history for the onscreen graphics device
- Fixed: Potential crash when editing data-frame with duplicate column names
- Added option to specify default onscreen graphics dimensions
- Fixed: Graphics windows used to assume a minimum size of 640*480 pixels, even if a smaller size was specified
- Added option to disable function argument hinting
- New functions rk.show.message() and rk.show.question() for user interaction from R code