@@ -109,7 +109,7 @@
 			</tab>
 			<tab id="option" label="Options" >
 				<checkbox value_unchecked="0" checked="true" value="1" id="narm" label="Omit missing values" />
-				<saveobject intial="rk.univariate" id="saveas" checkable="true" label="Store results" />
+				<saveobject initial="rk.univariate" id="saveas" checkable="true" label="Store results" />
 				<stretch/>
 			</tab>
 		</tabbook>
