@@ -1,3 +1,4 @@
+- Fixed: Submit button would not become enabled in "Basic Statistics" plugin
 - Moved automated testing framework moved to a dedicated R package "rkwardtests", and added documentation
 - Support pasting to the middle of the current command line in the R Console
 - Better handling of script-editor commands while the R Console is busy
